Fix code blocks on developer.apple.com
Before, the code block's background was white and the text was also white so you could not see the text. I just made the background black again.

--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -2599,6 +2599,9 @@ CSS
 .disabled {
     color: ${gray} !important;
 }
+.code-listing {
+    background-color: var(--darkreader-neutral-background) !important;
+}
 
 IGNORE IMAGE ANALYSIS
 .screen-hero
